#33 implement backend event and performance creation
